docs/mslc.css
body {
  margin: 1.0em;
}

/* [Create REsponsive CCS Grid Layouts with GRID WRAPPING](https://youtu.be/3T0gjtXRNC0?si=hNJ33YFBpluz1kvs) */
.grid-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(900px, 1fr));
  column-gap: 10px;
  row-gap: 15px;
}

div#pwps {
  grid-template-columns: repeat(auto-fit, minmax(600px, 1fr));
}

div#matrix_metrics,
div#ci_sort_order2 {
  /* [Bootstrap: Button group not wrapping when too long](https://stackoverflow.com/a/41625276) */
  flex-wrap: wrap;
}

.highlight {
  fill: black;
}

circle.highlight {
  opacity: 1;
}

/* [position: sticky is Amazing](https://mastery.games/post/position-sticky/) */
.heading {
  background: #ccc;
  line-height: 50px;
  margin-top: 10px;
  margin-bottom: 10px;
  font-size: 2.0em padding-left: 10px;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.loading_error {
  color: red;
  font-size: 2.0em;
}

